--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "react": "^17.0.0 || ^18.0.0",
+    "react-bootstrap": "^2.10.5",
     "react-datepicker": "^7.4.0",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-redux": "^9.1.2",
